Practice and Furni website

--- a/Front End/Lesson7.html
+++ b/Front End/Lesson7.html
@@ -19,7 +19,11 @@
           <li>The car is equipped with a 7-speed transmission and a sport mode that increases the engine's output to 700 horsepower.</li>
           <li>The car has a 20-inch alloy wheels, a carbon fiber roof, and a carbon fiber body shell.</li>
           <li>The car's interior is designed with a focus on comfort and style, featuring a leather steering wheel, a 12.3-inch
-        <h2>My Projects</h2>
+       <ol>
+        <li>The car's interior is designed with a focus on comfort and style, featuring a leather steering wheel, a 12.3-inch</li>
+        <li> The car has a 20-inch alloy wheels, a carbon fiber roof, and a carbon fiber body shell.</li>
+       </ol> 
+       <h2>My Projects</h2>
 ">
             <h3>The 2025 Audi RS7</h3>
             <img src="https://www.caranddriver.com/photos/g42087774/2024-audi-rs7-performance-gallery/" alt="The 2025 Audi RS7">
